# beamtable

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
crates/beamtable/: Cargo.toml
crates/beamtable-cli/: Cargo.toml  README.md
crates/beamtable-cli/src/: main.rs
crates/beamtable-demo/: Cargo.toml  README.md
crates/beamtable-demo/src/: main.rs
crates/beamtable/src/: events.rs  geometry.rs  lib.rs  table.rs
crates/pybeamtable/: Cargo.toml
crates/pybeamtable/src/: lib.rs
src/: events.rs  geometry.rs  lib.rs  main.rs  scanbeam.rs  table.rs  tests.rs
