[package]
name = "beamtable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "beamtable"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.19.0"

# TODO: split the bin into its own crate so we don't pull those deps inti the maturin target
vsvg = "0.3.0"
vsvg-viewer = "0.3.0"

# TODO: getting this right is annoying, vsvg should reexport it instead: https://github.com/abey79/vsvg/issues/110
kurbo = "0.10.4" # let vsvg choose version
