[package]
name = "beamtable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "beamtable"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.19.0"

# TODO: split the bin into its own crate so we don't pull those deps inti the maturin target
# TODO: set to 0.4.0 when released
vsvg = { git = "https://github.com/abey79/vsvg", rev = "86ac544d0c049b3018d6f0a56611965886f0d461" }
vsvg-viewer = { git = "https://github.com/abey79/vsvg", rev = "86ac544d0c049b3018d6f0a56611965886f0d461" }
