[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.dependencies]
beamtable = { path = "crates/beamtable", version = "=0.1.0" }

anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["derive"] }
itertools = "0.12.0"
pyo3 = "0.20.2"
rand = "0.8.5"
vsvg = { git = "https://github.com/abey79/vsvg", rev = "94f2e6af180c065c8cbc2c6a5d3726f6a65f13a1"}
vsvg-viewer = { git = "https://github.com/abey79/vsvg", rev = "94f2e6af180c065c8cbc2c6a5d3726f6a65f13a1"}
whiskers = { git = "https://github.com/abey79/vsvg", rev = "94f2e6af180c065c8cbc2c6a5d3726f6a65f13a1"}
